--- a/index.html
+++ b/index.html
@@ -12,14 +12,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-   <style>
-      body {
-        padding-top: 5rem;
-      }
-      .starter-template {
-        padding: 3rem 1.5rem;
-      }
-   </style>
+    <link href="style.css" rel="stylesheet">
   </head>
 
   <body>
@@ -80,32 +73,6 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <script>
-      $(document).ready(function(){
-          $("#submitBtn").click(function(){
-            var ml_prediction_url = 'http://40.85.149.250:80/score';
-            clearConfirmationLabel();
-            var requestData = {'request': $('#comments').val()};
-            $.post(ml_prediction_url, requestData, function(data){
-              var msg = '';
-              if(data && data.department && data.probability) {
-                msg = 'After analysis, the machine learning has determine to forward your email to ' + 
-                      data.department + ' because of a ' + data.probability + ' probability!';
-              }
-              else {
-               msg =   JSON.stringify(data);
-              }
-              $(".confirmationDiv").text(msg);
-            }).fail(function(data){
-
-            });
-
-            function clearConfirmationLabel(){
-              $(".confirmationDiv").text('');
-            }
-
-          })
-      });
-      </script>
+    <script src="home.js"></script>
   </body>
 </html>
